# logger-diary-online

./: .gitignore  .platform.app.yaml  CHANGELOG.MD  Cargo.toml  LICENSE.MD  LICENSE.TXT  README.MD  README.md  composer.json  full-license.rtf  index.php  main.js  package-lock.json  package.json  setenv.bat  windows-installer.iss
.php/: runphp.cmd
back/: index.php
docs/: index.md
icons/: logo.icns
logger/: composer.json
logger/served/: index.php
logger/styles/: style-taupe.css  style.css
php/: php.ini
public/: index.php
public/pages/: settings.php
source/img/: jellybean-preview.pdn
source/scripts/: get_more_accurate_time.py
source/served/: index.php
source/served/pages/: settings.php
source/styles/: style-dark.css  style-jellybean.css  style-rouge.css  style-taupe.css  style.css
src/: main.rs
