[package]
name = "logger-diary"
description = "The supersimple digital diary software."
version = "0.1.0"
authors = ["Marnix B <programmer.marxin0810@gmail.com>"]
edition = "2018"
license-file = "License.md"
readme = "README.md"
repository = "https://github.com/Marnix0810/logger-diary"
homepage = "https://marnix0810.github.io/logger-diary"

[dependencies]
chrono = "0.4.11"