[package]
name = "logger-diary"
description = "The supersimple digital diary software."
version = "0.1.0"
authors = ["Marlène B <just.mar.ok2813@gmail.com>"]
edition = "2018"
license-file = "License.md"
readme = "README.md"
repository = "https://github.com/that-mar/logger-diary"
homepage = "https://that-mar.github.io/logger-diary"

[dependencies]
chrono = "0.4.11"